--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -80,6 +80,7 @@ body, pre{
     }
     .btnbox{
         text-align: center;
+        margin-top: 20px;
     }
     .btn{
         outline: none;
@@ -93,18 +94,12 @@ body, pre{
         color: #fff;
         cursor: pointer;
         transition: .3s ease all;
-        margin: 20px 5px;
+        margin: 5px;
         &:active{
             background-color: rgba($color: #000000, $alpha: 1);
         }
-        &#start-tnt{
-            margin-top: 0;
-        }
     }
     #tnt{
-        button{
-            margin-top: 0;
-        }
         #recording-instructions{
             font-size: 14px;
             color: rgb(194, 3, 3);
@@ -118,6 +113,10 @@ body, pre{
 
 .bold{
     font-weight: bold;
+}
+
+.italic{
+    font-style: italic;
 }
 
 @media (max-width:400px){
